--- a/tcdbr/public/manifest.json
+++ b/tcdbr/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "The Code Drop",
+  "name": "The Code Drop Box",
   "icons": [
     {
       "src": "favicon.ico",
